# togglecorp-backend

./: .gitignore  Dockerfile  gh-docker-compose.yml  pyproject.toml
apps/common/: admin.py  enums.py  factories.py  models.py  serializers.py  types.py
apps/employee/: admin.py  models.py
apps/employee/migrations/: 0001_initial.py  0002_alter_employee_alumni.py
apps/templates/emails/: base.html  base.txt
apps/templates/emails/user/password_changed/: content.html  content.txt
apps/templates/emails/user/password_reset/: content.html  content.txt
apps/templates/web/admin/: base.html
apps/templates/web/admin/user/: unsubscribe_email__confirm.html
apps/user/: admin.py  dataloaders.py  factories.py  filters.py  models.py  mutations.py  queries.py  serializers.py  types.py  views.py
apps/user/migrations/: 0001_initial.py
apps/user/tests/: test_mutations.py  test_queries.py
main/: caches.py  celery.py  emails.py  enums.py  permalinks.py  sentry.py  settings.py  storages.py  template_context_processor.py  template_tags.py  token.py  urls.py
main/graphql/: dataloaders.py  schema.py
main/tests/: __init__.py  base.py  test_fake.py
scripts/: run_develop.sh  run_tests.sh
utils/: common.py  db.py  email.py  hcaptcha.py
utils/strawberry/: enums.py  mutations.py  paginations.py  transformers.py  types.py
